--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -3,3 +3,46 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  position: relative;
+  height: 100vh;
+  background-color: #F5F7FB;
+  font-family: Inter, Arial, sans-serif;
+  color: #293264;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#blob-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#blob-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  border: none;
+  border-radius: 10px;
+  background-color: #4D5B9E;
+  font-size: 0.64rem; /* 10.24px */
+  font-weight: 600;
+  font-family: Inter, Arial, sans-serif;
+  color: #F5F7FB;
+}
