Created startNewQuiz() function
- Created a new function in App called startNewQuiz(). This simply sets the quizStarted state to true.
- Passed down startNewQuiz() as a prop, through Splash and down to the grandchild StartBtn.
- Added onClick={startNewQuiz} to StartBtn.
- Added border-radius: 15px to button.splash (I forgot it last time).

--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -65,6 +65,7 @@ p.intro {
 }
 
 button.splash {
+  border-radius: 15px;
   width: 12.0625rem; /* 193px */
   height: 3.25rem; /* 52px */
   font-size: 1rem;
