--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -81,7 +81,7 @@ button.splash {
 /* Quiz Component ------------------------------------------------- */
 form {
   width: calc(100vw - 150px);
-  max-width: 37.5rem; /* 600px */
+  max-width: 31.25rem; /* 500px */
 }
 
 article.question {
@@ -100,6 +100,30 @@ legend {
 .answer-options {
   display: flex;
   gap: 1rem;
+}
+
+.answer {
+  position: relative;
+}
+
+.answer label {
+  min-width: 4.125rem; /* 60px */
+  border: 1px solid #4D5B9E;
+  border-radius: 8px;
+  padding: 0.25rem 1rem; /* 4px 6px */
+  font-size: 0.64rem; /* 10.24px */
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.radio-input {
+  position: absolute;
+  opacity: 0;
+}
+
+input:checked + label, input:focus + label, input:hover + label {
+  background: #D6DBF5;
+  border: 1px solid #D6DBF5;
 }
 
 button#check-answers {
