Renamed Splash's StartBtn context
- Renamed the context prop passed to the StartBtn in Splash component from splash to start. It just made more sense to name it after what the button does than where it is.

--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -68,7 +68,7 @@ p.intro {
   margin-bottom: 1.75rem;
 }
 
-button.splash {
+button.start {
   border-radius: 15px;
   width: 12.0625rem; /* 193px */
   height: 3.25rem; /* 52px */
