Added fallback options
- Created a fallback <div> that is rendered in the Quiz component when getQuizFromAPI() fails.
- I encountered frequent 429 errors during development. While refreshing reliably fixed the issue, any users encountering that empty white page would probably be very confused.
- Added a second Button that calls getQuizFromAPI() for user convenience.

--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -140,6 +140,14 @@ form button {
   margin-top: 1.25rem; /* 20px */
 }
 
+.quiz-fallback button {
+  margin-top: 1.25rem; /* 20px */
+}
+
+.quiz-fallback p {
+  max-width: 390px;
+}
+
 
 /* Answers Component ------------------------------------------------- */
 .quiz-answers {
