--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -7,6 +7,7 @@
 body {
   position: relative;
   height: 100%;
+  min-height: 100vh;
   background-color: #F5F7FB;
   font-family: Inter, Arial, sans-serif;
   color: #293264;
@@ -31,12 +32,13 @@ body {
 }
 
 main {
+  margin: 1.25rem auto; /* 20px */
+  max-width: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-bottom: 1.25rem; /* 20px */
 }
 
 button {
@@ -89,8 +91,7 @@ p.intro {
 
 /* Quiz Component ------------------------------------------------- */
 form {
-  width: calc(100vw - 150px);
-  max-width: 31.25rem; /* 500px */
+  max-width: 43.75rem; /* 500px */
 }
 
 article.question {
