Added media query to improve display on large screens
- Added a media query to increase font and button sizes on screens over 900px.
- Seriously, 10.24px fonts on desktop?! I THINK NOT.

--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -175,3 +175,26 @@ h2 {
   font-size: 0.8rem; /* 12.8px */
   font-weight: bold;
 }
+
+@media (min-width: 900px) {
+  body {
+    font-size: 1.2rem;
+  }
+
+  label, button, .revealed-answer {
+    font-size: 0.7rem!important;
+  }
+
+  button {
+    transform: scale(1.1)
+  }
+
+  .button-large {
+    height: 3rem; /* 52px */
+    font-size: 0.8rem!important;
+  }
+
+  .button-medium {
+    width: 8.5rem;
+  }
+}
